<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HangUpAlready</string>
    <string name="action_settings">Settings</string>
    <string name="warning">**Shake Warning**</string>
    <string name="sensitivity">Sensitivity</string>
    <string name="enabled">Enabled</string>
    <string name="sensitivity_summary">How hard do you want to shake the phone to hang it up?</string>
    <string name="default_text">Default: 3000</string>
    <string name="default_value">3000</string>
    <string name="enabled_summary">Enable or disable the application</string>
<string name="warning_title">Shake warning</string>
<string name="warning_desc">A pop-up alert that the application is enabled</string>
<string name="graph">graph</string>
<string name="data_graph">Launch Data Graph</string>
<string name="data_graph_desc">Use this data logging tool to determine the appropriate sensitivity</string>
<string name ="start_graph">Capture shake data</string>
<string name ="stop_graph">Graph the data</string>
<string name ="avg_string">Average: 0</string>
<string name ="max_string">Maximum: 0</string>
<string name ="shake_string">Sensitivity: </string>

</resources>